created HTML and CSS for index, contact_me, and sign_in

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+#Solved folder
+C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved/
