--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,5 @@ dist
 
 #Solved folder
 C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved/
+C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved\
+C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved
