Fixed gitignore bug

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,4 @@ dist
 .tern-port
 
 #Solved folder
-C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved/
-C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved\
-C:\Users\Ariel Schwartz\Documents\Coding BootCamp\Unit1\Module2\portfolio\Solved
+Solved/
